Fix alignment issue with the collapsible component.

--- a/app/assets/stylesheets/components/editorial/_collapsible.scss
+++ b/app/assets/stylesheets/components/editorial/_collapsible.scss
@@ -38,6 +38,9 @@
     @include inline-block;
     color: $color-icon-open;
     vertical-align: middle;
+    position: absolute;
+    right:	0;
+    top: 4px;
   }
 }
 
